Bug 93198 - gtk3: pasting using middle mouse button doesn't work
Summary: gtk3: pasting using middle mouse button doesn't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.1
Keywords: bibisected
: 93588 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-06 14:46 UTC by Michael Weghorn
Modified: 2016-10-25 19:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2015-08-06 14:46:02 UTC
This is a bug report created based on bug 92788.

Pasting using the middle mouse button no longer works when using the GTK3 version of LibreOffice.

Steps to reproduce:
1) select some text with the mouse in another application 
2) open a new document in LibreOffice Writer (use GTK3 build of LibreOffice)
3) click the middle mouse button in the document

Result:
Nothing happens. The document remains unchanged.

Expected result:
The previously selected text should be inserted into the Writer document.
Comment 1 Michael Weghorn 2015-08-06 14:52:21 UTC
This bug has previously been bibisected and bisected in bug 92788 (s. comments 4 and 8 in that bug report). The problem still occurs with bug 92788 being fixed.

The respective commit, from which on the behaviour occurs is the following. If I revert that commit, pasting using the middle mouse button works again. I have tested this using master as of commit 4008b6f9bfd919a7435047bc0aedcf7613009809.

commit 031a347668e56c1b38c0539d30e9a1cbb808ca02
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed Jun 17 16:25:47 2015 +0100

    use gtk3 vclplug by default under GNOME3 if available
    
    Change-Id: I4efe8bdfb7080365094306aee9db6b69a7f9e86a

Bug 93054 also occurs since that commit.
Comment 2 Caolán McNamara 2015-08-07 08:02:18 UTC
presumably its not a true regression if the problem is that "middle paste works with the gtk3 vclplug and not with the gtk3 vclplug"
Comment 3 Caolán McNamara 2015-08-07 09:42:34 UTC
only CLIPBOARD is/was supported, will add PRIMARY as well
Comment 4 Commit Notification 2015-08-07 09:44:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea4a775eb1a15d2be198e42b199af025ed90926a

Resolves: tdf#93198 gtk3: support PRIMARY as well as CLIPBOARD

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-08-07 14:53:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=48bb50302187536339f680d850c90a3e4512c996&h=libreoffice-5-0

Resolves: tdf#93198 gtk3: support PRIMARY as well as CLIPBOARD

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Maxim Monastirsky 2015-08-23 06:48:24 UTC
*** Bug 93588 has been marked as a duplicate of this bug. ***
Comment 7 Robinson Tryon (qubit) 2015-12-17 10:30:31 UTC Comment hidden (obsolete)