Resolves: tdf#93198 gtk3: support PRIMARY as well as CLIPBOARD

Change-Id: Ia8c7da1e321f363efee2d60b29078b35fcbe1dcd